fixed poemPocket grid alignment

--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -53,7 +53,7 @@
     max-width: 100%;
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: auto;
     grid-auto-flow: row;
     grid-auto-rows: 1fr;
     padding: 3%;
